:fix: downgrade java version to build on ec2 - fix class