@@ -5,6 +5,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -16,6 +17,6 @@ public class ListFilesByBucket {
         List<S3ObjectSummary> s3ObjectSummaries = listAllObjectsByBucketName.executar(bucketName);
         return s3ObjectSummaries.stream()
                 .filter(item -> bucketName.equals(item.getBucketName()))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
